* Tidy up un-needed things from the agent. * Add pin code auth for code '0000' * Add configuration for hci0, hci1 etc. as device

--- a/bt-agent-a2dp.service
+++ b/bt-agent-a2dp.service
@@ -4,6 +4,9 @@ After=bluetooth.service
 Wants=bluetooth.service
 
 [Service]
+# For hc1 etc set in the optional env var file as:
+#BLUETOOTH_ADAPTER=hci1
+EnvironmentFile=-/etc/default/a2dp-agent
 ExecStart=/usr/bin/python3 -u /usr/local/bin/a2dp-agent
 SyslogIdentifier=A2DP-Agent
 
